# SBMap

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: AppRun  sbmap.desktop  sbmap.rc  tilemap.sbm
cmake/: config.h.in
cmake/toolchains/: mingw-w64-x86_64.cmake
scripts/: Dockerfile  build-appimage.sh  build.bat  build.sh
source/: app.cpp  app.h  core.h  embedded.h  error.cpp  error.h  error_popup.cpp  error_popup.h  main.cpp  map_viewport.cpp  map_viewport.h  scope.h  texture.cpp  texture.h  tile_palette.cpp  tile_palette.h  tilemap.cpp  tilemap.h  widget.h
